Fix for STORE-1342 : Remove conflicting z-index attribute , since it cause to overlap with search histroy drop down

--- a/apps/store/themes/store/css/left-navigation.css
+++ b/apps/store/themes/store/css/left-navigation.css
@@ -593,16 +593,14 @@ a.ctrl-filter-category:hover,a.ctrl-filter-category:focus
   left:2px;
   opacity:1;
 }
-
-.ast-img .ast-type-icon{
-    display:block;
-    background:rgba(0, 0, 0, .3);
-    color:#fff;
-    width:40px;
-    height:40px;
-    position:absolute;
-    top:110px;
-    z-index: 999;
+.ast-img .ast-type-icon {
+    display: block;
+    background: rgba(0, 0, 0, .3);
+    color: #fff;
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    top: 110px;
 }
 .asset-details-header .ast-img .ast-type-icon{
     top:120px;
